// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ApplesoftAssembler assemble should correctly handle REM instructions 1`] = `
[
  31,
  8,
  1,
  0,
  178,
  32,
  69,
  97,
  116,
  32,
  34,
  121,
  111,
  117,
  114,
  34,
  32,
  61,
  32,
  118,
  101,
  103,
  101,
  116,
  97,
  98,
  108,
  101,
  115,
  0,
  0,
  0,
]
`;

exports[`ApplesoftAssembler assemble should correctly handle multiple statements 1`] = `
[
  22,
  8,
  1,
  0,
  170,
  88,
  36,
  208,
  34,
  115,
  111,
  109,
  101,
  32,
  118,
  97,
  108,
  117,
  101,
  34,
  0,
  30,
  8,
  2,
  0,
  186,
  88,
  36,
  0,
  59,
  8,
  3,
  0,
  170,
  89,
  36,
  208,
  88,
  36,
  200,
  34,
  115,
  111,
  109,
  101,
  32,
  111,
  116,
  104,
  101,
  114,
  32,
  116,
  101,
  115,
  116,
  34,
  0,
  67,
  8,
  4,
  0,
  186,
  89,
  36,
  0,
  74,
  8,
  5,
  0,
  171,
  49,
  0,
  0,
  0,
]
`;

exports[`ApplesoftAssembler assemble should correctly handle string assignment 1`] = `
[
  22,
  8,
  1,
  0,
  170,
  88,
  36,
  208,
  34,
  115,
  111,
  109,
  101,
  32,
  118,
  97,
  108,
  117,
  101,
  34,
  0,
  0,
  0,
]
`;
